--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   page_transition: ^2.1.0
   flutter_native_splash: ^2.4.1
   flutter_launcher_icons: ^0.14.1
+  table_calendar: ^3.1.2
 
 flutter_native_splash:
   color: "#345C51"
